--- a/src/components/Message.scss
+++ b/src/components/Message.scss
@@ -4,44 +4,47 @@
 .message {
   border-bottom: 1px rgba(0, 0, 0, 0.07) dashed;
   padding: 0.45em;
+  padding-right: 0.15em;
   font-size: 0.875em;
   word-break: break-all; // zabezpieczenia przed długimi treściami od użytkownika (BEZ SPACJI!), działa w IE
   overflow-wrap: break-word;  // lepsze, ale IE tego nie ogarnia
+  display: flex;
+  justify-content: space-between;
+  align-content: flex-start;
 
-  &:nth-child(2n) {
+  &:nth-child(2n) > section {
     background-color: rgba(0, 0, 0, 0.05);
   }
 
+  .delete-me {
+    /* flex-basis: 2em; */  // !!! niepotrzebne, więcej z tym problemów w IE !!!
+    justify-self: flex-start;
+    //align-content: ;
+    font-size: 2.5em;
+    padding: 0 0.25em;
+    margin-left: -0.15em;
+    margin-right: 0.2em;
+    opacity: 0.5;
+    max-width: 1em;
+    max-height: 1em;
+    line-height: 1em;
+    color: blue;
+    background-color:rgba(0, 0, 200, 0.1);
+    border-radius: 0.1em;
+    cursor: pointer;
+    transition: opacity 0.4s, color 0.3s, backround-color 0.5s;
+
+    &:hover {
+      opacity: 1;
+      color: red;
+      background-color: rgba(0, 0, 0, 0.2);
+    }
+  } // .detete-me
+
   section {
     display: flex;
-    // background-color: lightgreen;
-    justify-content: space-between;
-    align-content: flex-start;
-
-    .delete-me {
-      /* flex-basis: 2em; */  // !!! niepotrzebne, więcej z tym problemów w IE !!!
-      justify-self: flex-start;
-      //align-content: ;
-      font-size: 2.5em;
-      padding: 0 0.25em;
-      margin-left: -0.15em;
-      margin-right: 0.2em;
-      opacity: 0.5;
-      max-width: 1em;
-      max-height: 1em;
-      line-height: 1em;
-      color: blue;
-      background-color:rgba(0, 0, 200, 0.1);
-      border-radius: 0.1em;
-      cursor: pointer;
-      transition: opacity 0.4s, color 0.3s, backround-color 0.5s;
-  
-      &:hover {
-        opacity: 1;
-        color: red;
-        background-color: rgba(0, 0, 0, 0.2);
-      }
-    } // .detete-me
+    flex-grow: 2;
+    // margin-left: 2em;
 
     .message-container {
       flex-grow: 2;
@@ -61,6 +64,7 @@
           // background-color: moccasin;
 
           strong.time {
+            display: inline-block;
             background-color: #ccc;
             padding-left: 0.25em;
             padding-right: 0.25em;
